force-app/main/default/objects/Lead/fields/Brand__c.field-meta.xml
<CustomField>
    <fullName>Brand__c</fullName>
    <description>GP brand information</description>
    <label>Brand</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Ezidebit</fullName>
            </value>
            <value>
                <fullName>Eway</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>