force-app/main/default/objects/Lead/fields/Company_Referred_By__c.field-meta.xml
<CustomField>
    <fullName>Company_Referred_By__c</fullName>
    <description>Name of company of person who referred Ezidebit to the lead</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Company Referred By</label>
    <length>255</length>
    <type>Text</type>
</CustomField>