force-app/main/default/objects/Lead/fields/Date_Marketing_Qualified__c.field-meta.xml
<CustomField>
    <fullName>Date_Marketing_Qualified__c</fullName>
    <description>The date the lead status was Marketing Qualified</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>The date the lead status was Marketing Qualified</inlineHelpText>
    <label>Date Marketing Qualified</label>
    <type>Date</type>
</CustomField>