force-app/main/default/objects/Lead/fields/Enquiry_Type__c.field-meta.xml
<CustomField>
    <fullName>Enquiry_Type__c</fullName>
    <label>Enquiry Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Affiliate</fullName>
            </value>
            <value>
                <fullName>Certified Developer</fullName>
            </value>
            <value>
                <fullName>Demo Request</fullName>
            </value>
            <value>
                <fullName>Existing client</fullName>
            </value>
            <value>
                <fullName>Integration Enquiry</fullName>
            </value>
            <value>
                <fullName>Integration Partner</fullName>
            </value>
            <value>
                <fullName>New client</fullName>
            </value>
            <value>
                <fullName>Payer enquiring about a charge</fullName>
            </value>
            <value>
                <fullName>Sandbox Request</fullName>
            </value>
            <value>
                <fullName>Referred By MBO</fullName>
            </value>
            <value>
                <fullName>Request a call back</fullName>
            </value>
            <value>
                <fullName>Book a Walkthrough</fullName>
            </value>
            <value>
                <fullName>Request a quote</fullName>
            </value>
            <value>
                <fullName>Download a Trial</fullName>
            </value>
            <value>
                <fullName>Downloaded content</fullName>
            </value>
            <value>
                <fullName>Watched Video</fullName>
            </value>
            <value>
                <fullName>Subscribed to eNews</fullName>
            </value>
            <value>
                <fullName>Cloud Enquiry</fullName>
            </value>
            <value>
                <fullName>Inbound Partner Lead</fullName>
            </value>
            <value>
                <fullName>Outbound Partner Lead</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>