force-app/main/default/objects/Lead/fields/Software__c.field-meta.xml
<CustomField>
    <fullName>Software__c</fullName>
    <inlineHelpText>If you select Other - please specify details in field below.</inlineHelpText>
    <label>Software</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>365 Mechanix</fullName>
            </value>
            <value>
                <fullName>Accelerware</fullName>
            </value>
            <value>
                <fullName>Active Billing</fullName>
            </value>
            <value>
                <fullName>Active World</fullName>
            </value>
            <value>
                <fullName>AgilityCIS</fullName>
            </value>
            <value>
                <fullName>AimyPlus</fullName>
            </value>
            <value>
                <fullName>Alphasys</fullName>
            </value>
            <value>
                <fullName>AnytimeOffice</fullName>
            </value>
            <value>
                <fullName>Appello</fullName>
            </value>
            <value>
                <fullName>ASI</fullName>
            </value>
            <value>
                <fullName>ASSA</fullName>
            </value>
            <value>
                <fullName>Avocado</fullName>
            </value>
            <value>
                <fullName>AX3 Group</fullName>
            </value>
            <value>
                <fullName>Bark.com</fullName>
            </value>
            <value>
                <fullName>Baseplan</fullName>
            </value>
            <value>
                <fullName>Becklyn</fullName>
            </value>
            <value>
                <fullName>Better Clinics</fullName>
            </value>
            <value>
                <fullName>Better HQ</fullName>
            </value>
            <value>
                <fullName>Billing Bureau</fullName>
            </value>
            <value>
                <fullName>BIT</fullName>
            </value>
            <value>
                <fullName>Booking Boss</fullName>
            </value>
            <value>
                <fullName>Business Of Motion</fullName>
            </value>
            <value>
                <fullName>Centaman</fullName>
            </value>
            <value>
                <fullName>Cerebiz</fullName>
            </value>
            <value>
                <fullName>Cirrus Technologies</fullName>
            </value>
            <value>
                <fullName>Clearwater</fullName>
            </value>
            <value>
                <fullName>Client Connect</fullName>
            </value>
            <value>
                <fullName>Clouding Around</fullName>
            </value>
            <value>
                <fullName>CloudMasons</fullName>
            </value>
            <value>
                <fullName>Clubware</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>