force-app/main/default/objects/Lead/fields/Support_Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>Support_Phone_Number__c</fullName>
    <description>Returns phone number for AU or NZ based on country selected on lead. Used in merge fields on email templates</description>
    <formula>if (ISPICKVAL( CountryCode ,&quot;NZ&quot;),&quot;0800 478 483&quot;,&quot;1300 763 256&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Support Phone Number</label>
    <type>Text</type>
</CustomField>