force-app/main/default/objects/Lead/fields/Terminal_Owner__c.field-meta.xml
<CustomField>
    <fullName>Terminal_Owner__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Terminal Owner</label>
    <length>255</length>
    <type>Text</type>
</CustomField>